<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    card_view:cardElevation="@dimen/_7sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_5sdp"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:elevation="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    android:padding="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <RelativeLayout
            android:id="@+id/lytImgThumb"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_margin="@dimen/_10sdp">

            <ImageView
                android:id="@+id/ivItemImage"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/order_box_im"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lytDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/lytImgThumb"
            android:layout_marginTop="@dimen/_5sdp">

            <RelativeLayout
                android:id="@+id/priceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/tvHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/order_id_90897"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="?attr/myTextColor"
                        android:fontFamily="@font/poppins_medium"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvHeading"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvKilogram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name_abc_juice_powder"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="?attr/textgrey"
                        android:fontFamily="@font/poppins_medium"/>

                    <TextView
                        android:id="@+id/tvPlacedDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/placed_on_octobar_19_2021"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="?attr/textgrey"
                        android:fontFamily="@font/poppins_medium"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity"
                            android:textSize="@dimen/_10sdp"
                            android:textColor="?attr/textgrey"
                            android:fontFamily="@font/poppins_medium"/>

                        <TextView
                            android:id="@+id/tvQuantityVal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10"
                            android:textSize="@dimen/_12sdp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:textColor="?attr/myTextColor"
                            android:fontFamily="@font/poppins_bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price"
                            android:textSize="@dimen/_10sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:textColor="?attr/textgrey"
                            android:fontFamily="@font/poppins_medium"/>

                        <TextView
                            android:id="@+id/tvPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="₹10"
                            android:textSize="@dimen/_12sdp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:textColor="?attr/myTextColor"
                            android:fontFamily="@font/poppins_bold"/>

                    </LinearLayout>


                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_below="@+id/lytImgThumb"
            android:id="@+id/vBorder"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:layout_marginBottom="@dimen/_10sdp"/>


        <LinearLayout
            android:layout_below="@+id/vBorder"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_placed"
                android:textSize="@dimen/_10sdp"
                android:textColor="?attr/textgrey"
                android:fontFamily="@font/poppins_medium"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/aug_29_2021"
                android:textSize="@dimen/_10sdp"
                android:textColor="?attr/textgrey"
                android:textAlignment="textEnd"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>