<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/_24sdp"/>

        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/please_enter_your_mobile_number_for_verification"
            android:textColor="@color/grey"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_14sdp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_40sdp">

            <!-- Country Code Picker -->
            <com.hbb20.CountryCodePicker
                android:layout_centerVertical="true"
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                app:ccp_defaultNameCode="IN"
                app:ccp_showFlag="false"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ccp"
                android:layout_marginStart="8dp"
                android:hint="@string/mobile_number"
                app:hintTextColor="@color/primary"
                app:boxStrokeColor="@color/primary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="number"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="@dimen/_24sdp"
            android:elevation="10dp"
            app:cardElevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGenerateOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/send_otp"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="@null"
                android:textColor="@color/white"
                android:background="@drawable/gradient_button" />
            </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
