<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_3sdp"
        android:layout_weight="1"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        android:elevation="8dp"
        app:cardCornerRadius="5dp"
        card_view:cardElevation="7dp"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:padding="@dimen/_5sdp"
                >

                <ImageView
                    android:id="@+id/ivItemImage"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/demo_image"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_123_00"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/darkGreen"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_medium"/>

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/abc_juice_powder"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="?attr/myTextColor"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_medium"/>

                <TextView
                    android:id="@+id/tvKilogram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_80_gram"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="?attr/textgrey"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_medium"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/grey" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bag_ic"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_now"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="?attr/textgrey"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_medium"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
